added result css and result html to index html and style css

--- a/index.html
+++ b/index.html
@@ -2,15 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>HYF</title>
+    <title>Hack Your Future Belgium</title>
     <meta name="description" content="HYF webpage" />
     <meta name="author" content="HYF-GROUP2" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"/>
+   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="/style.сss">
+   
   </head>
   <body>
-  
+  <header>
+  </header>
+  <main>
+    <section><!--MAIN SCREEN --></section>
+    <section><!--OUR PROGRAM --></section>
+    <section class="ourResult">
+      <div class="resultLayout">
+        <div class="resultBox">
+          <div class="resultInfo">
+            <h2 class="title">Our Impact</h2>
+            <P class="titleDefinition">We graduated over 100 people in Belgium and more than 300 globally. In Belgium, over 70% found and retained a high-quality job as a developer.</P>
+          </div>
+          <div class="tableResult">
+            <div class="columnOfTable">
+              <h1 class="cTitle">100</h1>
+              <p class="cParag">Students graduated since HackYourFuture Belgium was founded in 2018</p>
+            </div>
+      
+            <div class="columnOfTable">
+              <h1 class="cTitle">%70</h1>
+              <p class="cParag">Of our graduates find an internship, a job or start advanced studies.</p>
+            </div>
+      
+            <div class="columnOfTable">
+              <h1 class="cTitle">300+</h1>
+              <p class="cParag">Alumni in the Netherlands, Denmark, Belgium and Canada.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      </section>
+
+      <section><!--sUCCESS STORY --></section>
+  </main>
+
+  <section><!--FOOTER --></section>
+
+
 </body>
 </html>
