--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <title>Hack Your Future Belgium</title>
     <meta name="description" content="HYF webpage" />
     <meta name="author" content="HYF-GROUP2" />
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="/style.сss">
+    <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"/>
    
   </head>
   <body>
