--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
   </head>
   <body>
   <header>
+  <section class="header">
+  <div class="navbar">
+    <div class="container flex">
+      <a href="https://hackyourfuture.be/"><img src="/img/logohyf.svg" alt="logo"
+      /></a>
+      
+        <nav>
+            <ul>
+                <li><a href="#">THE PROGRAM</a></li>
+                <li><a href="#">VOLUNTEER</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">SUPPORT US</a></li>
+            </ul>
+            <button>
+              APPLY NOW
+            </button>
+        </nav>
+    </div>
+  </div>
+</section>
   </header>
   <main>
     <section><!--MAIN SCREEN --></section>
