--- a/index.html
+++ b/index.html
@@ -9,31 +9,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-   
   </head>
+
   <body>
-  <header>
-  <section class="header">
-  <div class="navbar">
-    <div class="container flex">
-      <a href="https://hackyourfuture.be/"><img src="/img/logohyf.svg" alt="logo"
-      /></a>
-      
-        <nav>
-            <ul>
+  <header class="header">
+    <div class="navbar">
+      <div class="container flex">
+        <div class="logo">
+           <a href="https://hackyourfuture.be/"><img src="/img/logohyf.svg" alt="logo"/></a>
+        </div> 
+        <nav class="nav">
+           <ul>
                 <li><a href="#">THE PROGRAM</a></li>
                 <li><a href="#">VOLUNTEER</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">SUPPORT US</a></li>
+                <li><button>APPLY NOW</button></li>
             </ul>
-            <button>
-              APPLY NOW
-            </button>
-        </nav>
+          </nav>
+      </div>
     </div>
   </div>
-</section>
   </header>
   <main>
     <section><!--MAIN SCREEN --></section>
