--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><button>APPLY NOW</button></li>
             </ul>
           </nav>
+        </div>
       </div>
     </div>
   </div>
@@ -49,7 +50,7 @@
             </div>
       
             <div class="columnOfTable">
-              <h1 class="cTitle">%70</h1>
+              <h1 class="cTitle">70%</h1>
               <p class="cParag">Of our graduates find an internship, a job or start advanced studies.</p>
             </div>
       
