Added "successes story" html

--- a/index.html
+++ b/index.html
@@ -64,6 +64,32 @@
       </section>
 
       <section><!--sUCCESS STORY --></section>
+    <section class="suc-sto">
+        <h2 class="demo">our successes story</h2>
+        <div class="pic" title="gita">
+          <img src="gita.jpeg" class="pic"></div>
+        <h4 class="name">Gita - ttl.be</h4>
+        <h5 class="pos">QA Developer</h5>
+        <p class="bio">
+          "What HYF brought to me is<br> you should never give up<br> and
+          try to find a way when <br>you’re stuck.I’ve learned<br>
+          that dreaming big without <br>big efforts will bring you<br>
+          nowhere.Hack YourFuture was <br>part of my journey to<br>
+          become who I am now."
+        </p>
+          <div class="pic2" title="ram">
+          <img src="ram.jpeg" class="pic2"></div>
+          <h4 class="name2" >Ramzi - AppTweak </h4>
+                  <h5 class="pos2">UX/UI Designer</h5>
+                  <p class="bio2">
+                    "Hack Your Future is one of the <br> greatest programs that I joined.<br>
+                    It has opened many doors for me <br>to learn a lot about software<br>
+                    and web development. <br>Without this program,<br> I wouldn't be at the<br>
+                    current job which requires<br> good knowledge in front-end<br>
+                    development"
+                  </p>
+      </div>
+    </section>
   </main>
 
   <section><!--FOOTER --></section>
