--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       </div>
       </section>
 
-      <section><!--sUCCESS STORY --></section>
-    <section class="suc-sto">
+       <!-- sUCCESS STORY -->
+       <section class="suc-sto">
         <h2 class="demo">our successes story</h2>
         <div class="pic" title="gita">
           <img src="gita.jpeg" class="pic"></div>
