--- a/index.html
+++ b/index.html
@@ -88,8 +88,16 @@
                     current job which requires<br> good knowledge in front-end<br>
                     development"
                   </p>
-          </div>
-         </section>
+      </div>
+    </section>
+   </main>
+
+  <section><!--FOOTER --></section>
+
+
+</body> 
+</html>
+
         </main>
 
   <section><!--FOOTER --></section>
