--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       </section>
     
-\* sUCCESS STORY */
+<-- sUCCESS STORY -->
     <section class="suc-sto">
         <h2 class="demo">our successes story</h2>
         <div class="pic" title="gita">
