--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="suc-sto">
         <h2 class="demo">our successes story</h2>
         <div class="pic" title="gita">
-          <img src="/img/gita.jpeg" class="pic"></div>
+          <img src="./img/gita.jpeg" class="pic"></div>
         <h4 class="name">Gita - ttl.be</h4>
         <h5 class="pos">QA Developer</h5>
         <p class="bio">
@@ -78,7 +78,7 @@
           become who I am now."
         </p>
           <div class="pic2" title="ram">
-          <img src="/img/ram.jpeg" class="pic2"></div>
+          <img src="./img/ram.jpeg" class="pic2"></div>
           <h4 class="name2" >Ramzi - AppTweak </h4>
                   <h5 class="pos2">UX/UI Designer</h5>
                   <p class="bio2">
