html normal header

--- a/index.html
+++ b/index.html
@@ -12,27 +12,17 @@
   </head>
 
   <body>
-  <header class="header">
-    <div class="navbar">
-      <div class="container flex">
-        <div class="logo">
-           <a href="https://hackyourfuture.be/"><img src="/img/logohyf.svg" alt="logo"/></a>
-        </div> 
-        <nav class="nav">
-           <ul>
-                <li><a href="#">THE PROGRAM</a></li>
-                <li><a href="#">VOLUNTEER</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">SUPPORT US</a></li>
-                <li><button>APPLY NOW</button></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </div>
-  </header>
+    <div class="header">
+      <a href="https://hackyourfuture.be/" class="logo"><img src="img/logohyf.svg" alt="logo"/></a>
+   <div class="header-right">
+     <a class="nav_link" href="#">THE PROGRAM</a>
+     <a class="nav_link" href="#">VOLUNTEER</a>
+     <a class="nav_link" href="#">ABOUT</a>
+     <a class="nav_link" href="#">FAQ</a>
+     <a class="nav_link" href="#">SUPPORT US</a>
+     <button class="header-right button" href="https://docs.google.com/forms/d/e/1FAIpQLSfS0215I6BCy1jzpWmxv9UxYxp5I25ZcoWhSxijhcUImLELcg/viewform">APPLY NOW</button>
+</div>
+</div>
   <main>
     <section><!--MAIN SCREEN --></section>
     <section><!--OUR PROGRAM --></section>
