--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <div class="header">
+    <section class="header">
+      <div class="container_header" flex>
       <a href="https://hackyourfuture.be/" class="logo"><img src="img/logohyf.svg" alt="logo"/></a>
    <div class="header-right">
      <a class="nav_link" href="#">THE PROGRAM</a>
@@ -23,6 +24,8 @@
      <button class="header-right button" href="https://docs.google.com/forms/d/e/1FAIpQLSfS0215I6BCy1jzpWmxv9UxYxp5I25ZcoWhSxijhcUImLELcg/viewform">APPLY NOW</button>
 </div>
 </div>
+    </section>
+
   <main>
     <section><!--MAIN SCREEN --></section>
     <section><!--OUR PROGRAM --></section>
@@ -55,7 +58,7 @@
     
 
     <section class="suc-sto">
-        <h2 class="demo">our successes story</h2>
+        <h2 class="demo">OUR SUCCESS STORY</h2>
         <div class="pic" title="gita">
           <img src="./img/gita.jpeg" class="pic"></div>
         <h4 class="name">Gita - ttl.be</h4>
