added our values section to index html

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
       </div>
       </section>
     
+    <section class="padding-our-values">
+      
+
+
+    </section>
 
     <section class="suc-sto">
         <h2 class="demo">OUR SUCCESS STORY</h2>
