added images and structure of core value html to index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,34 @@
       </section>
     
     <section class="padding-our-values">
-      
+      <div class="margin-our-values">
+      <div class="table-our-values">
+        <h3 class="title-our-values"></h3>
+        <div class="box-our-values">
+          <div class="one-value"></div>
+            <img class="image-one-value" src="">
+            <h3 class="title-one-value">Community</h3>
+            <p class="info-one-value"></p>
+        </div>
+        <div class="one-value"></div>
+            <img class="image-one-value" src="">
+            <h3 class="title-one-value">Diversity & inclusiveness</h3>
+            <p class="info-one-value"></p>
+        </div>
+        <div class="one-value"></div>
+            <img class="image-one-value" src="">
+            <h3 class="title-one-value">Commitment</h3>
+            <p class="info-one-value"></p>
+        </div>
+        <div class="one-value"></div>
+            <img class="image-one-value" src="">
+            <h3 class="title-one-value">Open</h3>
+            <p class="info-one-value"></p>
+        </div>
+
+      </div>
+
+      </div>
 
 
     </section>
