--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
         <h3 class="title-our-values"></h3>
         <div class="box-our-values">
           <div class="one-value"></div>
-            <img class="image-one-value" src="">
+            <img class="image-one-value" src="/home/hyf/HYKWebsite/img/community.svg">
             <h3 class="title-one-value">Community</h3>
             <p class="info-one-value"></p>
         </div>
         <div class="one-value"></div>
-            <img class="image-one-value" src="">
+            <img class="image-one-value" src="/home/hyf/HYKWebsite/img/diversity.svg">
             <h3 class="title-one-value">Diversity & inclusiveness</h3>
             <p class="info-one-value"></p>
         </div>
         <div class="one-value"></div>
-            <img class="image-one-value" src="">
+            <img class="image-one-value" src="/home/hyf/HYKWebsite/img/commitment.svg">
             <h3 class="title-one-value">Commitment</h3>
             <p class="info-one-value"></p>
         </div>
         <div class="one-value"></div>
-            <img class="image-one-value" src="">
+            <img class="image-one-value" src="/home/hyf/HYKWebsite/img/open.svg">
             <h3 class="title-one-value">Open</h3>
             <p class="info-one-value"></p>
         </div>
