--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
           <div class="one-value"></div>
             <img class="image-one-value" src="/home/hyf/HYKWebsite/img/community.svg">
             <h3 class="title-one-value">Community</h3>
-            <p class="info-one-value"></p>
+            <p class="info-one-value">We’re largely dependent on volunteers. That’s what makes us an engaged grassroots community, as our students call it ‘the HYF family’</p>
         </div>
         <div class="one-value"></div>
             <img class="image-one-value" src="/home/hyf/HYKWebsite/img/diversity.svg">
             <h3 class="title-one-value">Diversity & inclusiveness</h3>
-            <p class="info-one-value"></p>
+            <p class="info-one-value">Our program is adapted to suit people with different backgrounds, often in vulnerable situations. We teach on Sundays to allow everyone to take control of their personal lives during the week.</p>
         </div>
         <div class="one-value"></div>
             <img class="image-one-value" src="/home/hyf/HYKWebsite/img/commitment.svg">
             <h3 class="title-one-value">Commitment</h3>
-            <p class="info-one-value"></p>
+            <p class="info-one-value">Our program is free of charge, although we ask for strong commitment during our 7 month-journey. And you know what? Many alumni stay actively involved!</p>
         </div>
         <div class="one-value"></div>
             <img class="image-one-value" src="/home/hyf/HYKWebsite/img/open.svg">
             <h3 class="title-one-value">Open</h3>
-            <p class="info-one-value"></p>
+            <p class="info-one-value">Sharing is caring. Our curriculum is 100% open. We believe in knowledge for the many, not the few.</p>
         </div>
 
       </div>
