changed class name our to core

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       </div>
       </section>
     
-    <section class="padding-our-values">
-      <div class="margin-our-values">
-      <div class="table-our-values">
-        <h3 class="title-our-values"></h3>
-        <div class="box-our-values">
+    <section class="padding-core-values">
+      <div class="margin-core-values">
+      <div class="table-core-values">
+        <h3 class="title-core-values"></h3>
+        <div class="box-core-values">
           <div class="one-value one-value2">
             <img class="image-one-value" alt="" src="/home/hyf/HYKWebsite/img/community.svg">
             <h3 class="title-one-value">Community</h3>
