added title for core value part

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section class="padding-core-values">
       <div class="margin-core-values">
       <div class="table-core-values">
-        <h3 class="title-core-values"></h3>
+        <h3 class="title-core-values">Our core values</h3>
         <div class="box-core-values">
           <div class="one-value one-value2">
             <img class="image-one-value" alt="" src="img/community.svg">
