Edited successes story html part
Added  "padding-suc-sto" section
Added "div"

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       </div>
       </div>
     </section>
-
-    <section class="suc-sto">
+<section class="padding-suc-sto">
+      <div class="suc-sto">
         <h2 class="demo">OUR SUCCESS STORY</h2>
         <div class="pic" title="gita">
           <img src="./img/gita.jpeg" class="pic"></div>
