added closing tag

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                     and web development. <br>Without this program,<br> I wouldn't be at the<br>
                     current job which requires<br> good knowledge in front-end<br>
                     development"
-                  </p>
+                </p>
+        </div>
       </div>
     </section>
    </main>
