--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                 <h5 class="pos">QA Developer</h5>
                 <p class="bio">
                     "What HYF brought to me is<br> you should never give up<br> and try to find a way when <br>you’re stuck.I’ve learned<br> that dreaming big without <br>big efforts will bring you<br> nowhere.Hack YourFuture was <br>part of my journey
-                    to<br> become who I am now."
+                    to
+                    <br> become who I am now."
                 </p>
                 <div class="pic2" title="ram">
                     <img src="./img/ram.jpeg" class="pic2"></div>
