--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <b> 6-weeks intensive Final Project</b> where students work on a real project with a real partner. Our training takes place at <b> BeCentral</b> Brussels every
                         <b>Sunday.</b> During the week, students are supported online in their <b>self-study,</b>homework and peer learning.
                     </p>
-                    <a data-target="link" href="#">
+                    <a data-target="link" href="https://hackyourfuture.be/program">
                         <button class="discover-button">
       Discover More
       <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right" class="arrow-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="color:inherit"data-side="right"><path fill="currentColor" d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"></path>
@@ -123,7 +123,8 @@
                 <h5 class="pos">QA Developer</h5>
                 <p class="bio">
                     "What HYF brought to me is<br> you should never give up<br> and try to find a way when <br>you’re stuck.I’ve learned<br> that dreaming big without <br>big efforts will bring you<br> nowhere.Hack YourFuture was <br>part of my journey
-                    to<br> become who I am now."
+                    to
+                    <br> become who I am now."
                 </p>
                 <div class="pic2" title="ram">
                     <img src="./img/ram.jpeg" class="pic2"></div>
