main image adding

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     </section>
 
   <main>
-    <section><!--MAIN SCREEN --></section>
-    <section><!--OUR PROGRAM --></section>
+    <div class="container_header" flex>
+      <img src="img/imgmain.png" class="img-fluid" alt="main-screen"> 
+    </div>
     <section class="ourResult">
       <div class="resultLayout">
         <div class="resultBox">
