Added html code for footer

--- a/index.html
+++ b/index.html
@@ -191,21 +191,19 @@
         </section>
     </main>
 
-    <section>
-        <!--FOOTER -->
-    </section>
-
-
-</body>
-
-</html>
-
-</main>
-
-<section>
-    <!--FOOTER -->
+    <section class="footer">
+      <div class="container">
+       <div class="box">
+     <h3 class="demo">Hack Your Future (part of Open Knowledge Belgium)</h3>
+    <p class="place">Open Knowledge Belgium vzw
+      Cantersteen 12
+      1000 Bruxelles</p>
+      <a class="place1" href="mailto:contact@hackyourfuture.be">contact@hackyourfuture.be</a> 
+    </div>
+    </div>
 </section>
 
+ </main>
 
 </body>
 
