Edited html class name

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </section>
         <section class="padding-suc-sto">
             <div class="suc-sto">
-                <h2 class="demo">OUR SUCCESS STORY</h2>
+                <h2 class="demo3">OUR SUCCESS STORY</h2>
                 <div class="pic" title="gita">
                     <img src="./img/gita.jpeg" class="pic"></div>
                 <h4 class="name">Gita - ttl.be</h4>
