--- a/index.html
+++ b/index.html
@@ -138,53 +138,55 @@
             </div>
         </section>
         <section class="our-partners">
-            <div class="our-partners-box">
-                <div class="box-title">
-                    <h2 class="our-partner-title">Our Partners</h2>
-                    <a href="mailto:contact@hackyourfuture.be" class="become-partner">
-                        Become a partner
-                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right" class="right-arrow" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="color:inherit" data-side="right">
-                            <path fill="currentColor" d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"></path>
-                        </svg>
-                    </a>
+            <div class="our-partners-wrapper">
+                <div class="our-partners-box">
+                    <div class="box-title">
+                        <h2 class="our-partner-title">Our Partners</h2>
+                        <a href="mailto:contact@hackyourfuture.be" class="become-partner">
+                            Become a partner
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right" class="right-arrow" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="color:inherit" data-side="right">
+                                <path fill="currentColor" d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"></path>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="partners-box">
-                <div class="logo">
-                    <img alt src="img/partners-logos/print-simple.svg" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/open-knowledge.svg" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/digital-belgium.svg" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/artevelde*.svg" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/bruxelles-economie.svg" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/microsoft.svg" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/duojob.png" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/member.png" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/datacamp.svg" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/ux-antwerp.png" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/open-knowledge.svg" class="company">
-                </div>
-                <div class="logo">
-                    <img alt src="img/partners-logos/bruxelles-formation.png" class="company">
+                <div class="partners-box">
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/print-simple.svg" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/open-knowledge.svg" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/digital-belgium.svg" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/artevelde*.svg" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/bruxelles-economie.svg" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/microsoft.svg" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/duojob.png" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/member.png" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/datacamp.svg" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/ux-antwerp.png" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/open-recognition.png" class="company" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="plogo">
+                        <img alt src="img/partners-logos/bruxelles-formation.png" class="company" style="width: 100%; height: auto;">
+                    </div>
                 </div>
             </div>
 
