files for support developers

--- a/index.html
+++ b/index.html
@@ -191,6 +191,28 @@
             </div>
 
         </section>
+
+        <section class="section-support">
+            <div class="outer-container-support">
+              <div class="inner-container-support">
+                <div class="div-support">
+                  <div class="div-content--support">
+                    <h1 class="support-title">
+                      Support the developers of tomorrow
+                    </h1>
+                    <p class="support-paragraph">
+                      Help refugees build digital & soft skills for
+                      a career in web development. We are a non-
+                      profit organization. Thanks to your support we 
+                      can improve and keep our program free of
+                      charge for students.
+                    </p>
+                  </div>
+                </div>
+                
+              </div>
+            </div>
+          </section>
     </main>
 
     <section class="footer">
