contactus left part with css

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         </section>
 
-        <section class="section-support">
+        <section style="margin-bottom:50px" class="section-support">
             <div class="outer-container-support">
               <div class="inner-container-support">
                 <div class="div-support">
@@ -214,7 +214,7 @@
             </div>
           </section>
   
-    <section class="mainscreen">
+    <section style="margin-bottom:50px" class="mainscreen">
         <div class="container__mainscreen">
         <div class="mainscreen_contactus">
             <h1 class="mainscreen__header">Contact us</h1>
@@ -234,7 +234,7 @@
         <div style="min-height:400px" class="mainscreen__img"></div>
         </section>
     </main>
-    
+
     <section class="footer">
       <div class="container">
        <div class="box">
