main photo maybe css,html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
     <main>
         <section>
-            <!--MAIN SCREEN -->
+            <div class="container_img" flex>
+                <img src="img/imgmain.png" class="img-fluid" alt="main-screen"> 
+              </div>
         </section>
         <section class="our-program">
             <div class="explanation-wrapper">
