some update styling for ourprogram img

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <main>
         <section>
             <div class="container_img" flex>
-                <img src="img/imgmain.png" class="img-fluid" alt="main-screen"> 
-              </div>
+                <img src="img/imgmain.png" class="img-fluid" alt="main-screen">
+            </div>
         </section>
         <section class="our-program">
             <div class="explanation-wrapper">
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="exp-img-outer">
-                    <div class="exp-img">
+                    <div class="exp-img" style="background: url(/img/ourprogram.jpg) 0% 0% / cover transparent;;">
 
                     </div>
                 </div>
@@ -196,85 +196,80 @@
 
         <section style="margin-bottom:50px" class="section-support">
             <div class="outer-container-support">
-              <div class="inner-container-support">
-                <div class="div-support">
-                  <div class="div-content--support">
-                    <h1 class="support-title">
-                      Support the developers of tomorrow
-                    </h1>
-                    <p class="support-paragraph">
-                      Help refugees build digital & soft skills for
-                      a career in web development. We are a non-
-                      profit organization. Thanks to your support we 
-                      can improve and keep our program free of
-                      charge for students.
-                    </p>
-                  </div>
-                </div>
-                <div class="container-donate">
-                    <form class="form-donate">
-                        <div class="select-donate">
-                            <label for="once" class="donate-label">
+                <div class="inner-container-support">
+                    <div class="div-support">
+                        <div class="div-content--support">
+                            <h1 class="support-title">
+                                Support the developers of tomorrow
+                            </h1>
+                            <p class="support-paragraph">
+                                Help refugees build digital & soft skills for a career in web development. We are a non- profit organization. Thanks to your support we can improve and keep our program free of charge for students.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container-donate">
+                        <form class="form-donate">
+                            <div class="select-donate">
+                                <label for="once" class="donate-label">
                                 <input type="radio" id="radio-once" name="donate-support" class="radio-donate">
                                 <p class="donate-times">One time</p>
                             </label>
-                            <label for="monthly" class="donate-label">
+                                <label for="monthly" class="donate-label">
                                 <input type="radio" id="radio-monthly" name="donate-support" class="radio-donate" checked="checked">
                                 <p class="donate-times">Monthly</p>
                             </label>
-                        </div>
-                        <div class="options-donate">
-                            <label class="donate-times amount-labels" for="amount-options">Select your amount</label>
-                            <ul id="amount-list-id" class="amount-list">
-                                <li class="amount-options1" tabindex="0">€10</li>
-                                <li class="amount-options" tabindex="0">€25</li>
-                                <li class="amount-options" tabindex="0">€50</li>
-                                <li class="amount-options" tabindex="0">€100</li>
-                                <li class="amount-options" tabindex="0">Full scholarship</li>
-                            </ul>
-                            <label class="donate-times">Amount</label>
-                            <input type="number" class="input-donate" value="10">
-                            <label class="donate-times">Message</label>
-                            <input type="text" class="input-donate" value="">
-                        </div>
-                        <button class="donate-button">Donate</button>
+                            </div>
+                            <div class="options-donate">
+                                <label class="donate-times amount-labels" for="amount-options">Select your amount</label>
+                                <ul id="amount-list-id" class="amount-list">
+                                    <li class="amount-options1" tabindex="0">€10</li>
+                                    <li class="amount-options" tabindex="0">€25</li>
+                                    <li class="amount-options" tabindex="0">€50</li>
+                                    <li class="amount-options" tabindex="0">€100</li>
+                                    <li class="amount-options" tabindex="0">Full scholarship</li>
+                                </ul>
+                                <label class="donate-times">Amount</label>
+                                <input type="number" class="input-donate" value="10">
+                                <label class="donate-times">Message</label>
+                                <input type="text" class="input-donate" value="">
+                            </div>
+                            <button class="donate-button">Donate</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section style="margin-bottom:50px" class="mainscreen">
+            <div class="container__mainscreen">
+                <div class="mainscreen_contactus">
+                    <h1 class="mainscreen__header">Contact us</h1>
+                    <p class="mainscreen_form">We’re always happy to welcome people like you to our HYF community. Drop us a line and become part of it!</p>
+                    <form class="mainscreen__form">
+                        <label for="full-name" class="mainscreen__form__name">Full name</label>
+                        <input type="text" id="full name" value class="mainscreen__form__input">
+                        <label for="email" class="mainscreen__form__name">Email address</label>
+                        <input type="email" id="email" value class="mainscreen__form__input">
+                        <label for="message" class="mainscreen__form__name">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10" class="mainscreen__form__message"></textarea>
+                        <button class="mainscreen__form__button">Send</button>
                     </form>
                 </div>
-              </div>
             </div>
-          </section>
-  
-    <section style="margin-bottom:50px" class="mainscreen">
-        <div class="container__mainscreen">
-        <div class="mainscreen_contactus">
-            <h1 class="mainscreen__header">Contact us</h1>
-            <p class="mainscreen_form">We’re always happy to welcome people like you to our HYF community. Drop us a line and become part of it!</p>
-            <form class="mainscreen__form">
-                <label for="full-name" class="mainscreen__form__name">Full name</label>
-                <input type="text" id="full name" value class="mainscreen__form__input">
-                <label for="email" class="mainscreen__form__name">Email address</label>
-                <input type="email" id="email" value class="mainscreen__form__input">
-                <label for="message" class="mainscreen__form__name">Message</label>
-                <textarea name="message" id="message" cols="30" rows="10"class="mainscreen__form__message"></textarea>
-                <button class="mainscreen__form__button">Send</button>
-            </form>
-        </div>
-        </div>
-        <div class="mainscreen__center"></div>
-        <div style="min-height:400px" class="mainscreen__img"></div>
+            <div class="mainscreen__center"></div>
+            <div style="min-height:400px" class="mainscreen__img"></div>
         </section>
     </main>
 
     <section class="footer">
-      <div class="container">
-       <div class="box">
-     <h3 class="demo">Hack Your Future (part of Open Knowledge Belgium)</h3>
-    <p class="place">Open Knowledge Belgium vzw
-      Cantersteen 12
-      1000 Bruxelles</p>
-      <a class="place1" href="mailto:contact@hackyourfuture.be">contact@hackyourfuture.be</a> 
-    </div>
-    </div>
-</section>
+        <div class="container">
+            <div class="box">
+                <h3 class="demo">Hack Your Future (part of Open Knowledge Belgium)</h3>
+                <p class="place">Open Knowledge Belgium vzw Cantersteen 12 1000 Bruxelles</p>
+                <a class="place1" href="mailto:contact@hackyourfuture.be">contact@hackyourfuture.be</a>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
