Edited index html
Added social media LINK

--- a/index.html
+++ b/index.html
@@ -273,6 +273,12 @@
         1000 Bruxelles</p>
         <a class="place1" href="mailto:contact@hackyourfuture.be">contact@hackyourfuture.be</a> 
     </div>
+    <nav class="social">
+        <a href="https://www.facebook.com/HackYFutureBE/"><i class="fab fa-facebook-f fa-2x"></i></a>
+        <a href="https://twitter.com/HackYFutureBE"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="https://github.com/HackYourFutureBelgium"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/company/hackyourfuture-belgium/"><i class="fab fa-linkedin-in fa-2x"></i></a>
+        </nav>
     </div>
 </section>
 </body>
