upload img for ourprogram part

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="exp-img-outer">
                     <div class="exp-img">
-                        <img src="./img/ourprogram.jpg" alt="">
+                        <img src="./img/ourprogram.jpg" style="width: 104%;" alt="">
                     </div>
                 </div>
             </div>
