--- a/index.html
+++ b/index.html
@@ -264,9 +264,7 @@
         <div class="container">
             <div class="box">
                  <h3 class="demo">Hack Your Future (part of Open Knowledge Belgium)</h3>
-                <p class="place">Open Knowledge Belgium vzw
-                 Cantersteen 12
-                 1000 Bruxelles</p>
+                <p class="place">Open Knowledge Belgium vzw<br>Cantersteen 12<br>1000 Bruxelles</p>
                 <a class="place1" href="mailto:contact@hackyourfuture.be">contact@hackyourfuture.be</a>
             </div>
             <nav class="social">
